--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -7,3 +7,20 @@
 .movie__image {
     width: 100%;
 }
+
+.modal {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal__content {
+    position: absolute;
+    inset: 0;
+    width: fit-content;
+    height: fit-content;
+    padding: 24px;
+    background-color: white;
+    margin: auto;
+}
